# eitn30-internet-inside

./: .gitignore  Cargo.toml  Makefile  README.md  individual-goals-new.md  individual-goals-updated.md  individual-goals.md  performance-evaluation.md  performance.md
.github/workflows/: deploy.yml  test.yml
deploy/: Makefile  longge-base.service  longge-mobile.service
performance/: .gitignore  README.md  performance-theory.md  performance.md  performance.py  plot.py  requirements.txt
rust-nrf24l01/: Cargo.toml
rust-nrf24l01/src/: lib.rs  rpi_ce.rs  sysfs_ce.rs
scripts/: build.sh  deploy.sh  env.sh.example  test.sh
src/: cli.rs  config.rs  main.rs  utils.rs
src/interface/: forward.rs  iptable.rs  mod.rs  packet.rs  routing.rs
src/interface/forward/: iptable.rs  mod.rs  route.rs
src/interface/models/: mod.rs  reader.rs  tun.rs  writer.rs
src/transceive/: mod.rs
src/transceive/models/: mod.rs  receiver.rs  transceiver.rs  transmitter.rs
src/transcieve/: mod.rs  models.rs
