[package]
name = "eitn30-internet-inside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
iptables = "0.5.1"
nrf24l01 = { version = "0.3.0", features = [
    "rpi_accel",
], path = "./rust-nrf24l01" }
packet = "0.1.4"
tun = "0.6.1"

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
