[package]
name = "eitn30-internet-inside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.3", features = ["derive"] }
ctrlc = "3.4.4"
iptables = "0.5.1"
nrf24l01 = { version = "0.3.0", features = [
    "rpi_accel",
], path = "./rust-nrf24l01" }
packet = "0.1.4"
# tun = "0.6.1"
tun2 = "1.3.0"

[package.metadata.cross.build]
default-target = "aarch64-unknown-linux-gnu"

[workspace]
members = ["rust-nrf24l01"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
